--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Кофейня Nordiclub
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: nordiclub
   flickr:
   github:
   instagram: nordiclub
