--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ it-mail:
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
+# №and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
 
